refactor: Melhor estrutura para a responsividade

--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
 
 <body>  
     <header>
+        <div class="menu-lateral">
+            <img src="assets/icons/menu-icon.png" alt="Menu Icon" width="35px" height="35px" onclick="menuLateral()">
+        </div>
+
         <div class="logo-PCI">
-            <img src="assets/logos/PCI-logo-escrita-branca.png" alt="80px" height="80px">
+            <img src="assets/logos/PCI-logo-branca.png" alt="Logo PCI" height="80px">
+        </div>
+
+        <div class="logo-PCI-escrita">
+            <img src="assets/logos/PCI-logo-escrita-branca.png" alt="Logo PCI" height="80px">
         </div>
 
         <div class="header-nav">
