--- a/pages/contato.html
+++ b/pages/contato.html
@@ -9,15 +9,23 @@
 
 <body>  
     <header>
+        <div class="menu-lateral">
+            <img src="../assets/icons/menu-icon.png" alt="Menu Icon" width="35px" height="35px" onclick="menuLateral()">
+        </div>
+
         <div class="logo-PCI">
-            <img src="../assets/logos/PCI-logo-escrita-branca.png" alt="80px" height="80px">
+            <img src="../assets/logos/PCI-logo-branca.png" alt="Logo PCI" height="80px">
+        </div>
+
+        <div class="logo-PCI-escrita">
+            <img src="../assets/logos/PCI-logo-escrita-branca.png" alt="Logo PCI" height="80px">
         </div>
 
         <div class="header-nav">
             <nav>
                 <ul>
-                    <a href="/index.html" id="nav-home">Início</a>
-                    <a href="/pages/sobre.html" id=nav-sobre>Sobre Nós</a>
+                    <a href="/index.html" id="nav-home" >Início</a>
+                    <a href="/pages/sobre.html" id=nav-sobre >Sobre Nós</a>
                     <a href="">Serviços</a></li>
                     <a href="/pages/portifolio.html" id="nav-portifolio">Portifólio</a>
                     <a href="/pages/contato.html" id="nav-contato" class="active">Contato</a>
@@ -36,7 +44,7 @@
         
     </main>
 
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
