feat: Seção dos principais dados da PCI

--- a/index.html
+++ b/index.html
@@ -98,6 +98,32 @@
             </div>
         </section>
 
+        <section id="dados">
+            <div class="dados-container">
+                <ul>
+                    <li class="dados-lista">
+                        <h3>
+                            Maior EJ integrada do Centro-Oeste
+                        </h3>
+                    </li>
+                        
+                    <li class="dados-lista">
+                        <p>+ 250</p>
+                        <p>Projetos executados desde 2018</p>
+                    </li>
+
+                    <li class="dados-lista">
+                        <p>+ 97%</p>
+                        <p>NPS</p>
+                    </li>
+                    
+                    <li class="dados-lista">
+                        <p>+ 25</p>
+                        <p>Anos de experiência</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <script src="js/script.js"></script>
