feat: Carrossel de parceiros

--- a/index.html
+++ b/index.html
@@ -124,6 +124,86 @@
                 </ul>
             </div>
         </section>
+
+        <section id="parceria">
+            <div class="parceria-titulo">
+                <h2>PARCEIROS</h2>
+            </div>
+
+            <div class="carrossel">
+                <ul>
+                    <li>
+                        <a href="https://www.instagram.com/cerrado.construtora/" target="_blank">
+                            <img src="assets/logos/parcerias/cc-logo.jpeg" alt="Cerrado Construtora Logo">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://www.criamov.com/" target="_blank">
+                            <img src="assets/logos/parcerias/criamov-logo.png" alt="CRIAmov Logo">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://www.instagram.com/clubedeengenhariabsb/" target="_blank">
+                            <img src="assets/logos/parcerias/cenb-logo.png" alt="CENB Logo">
+                        </a>
+                    </li>
+                    
+                    <li>
+                        <a href="https://www.monsterenergy.com/pt-br/" target="_blank">
+                            <img src="assets/logos/parcerias/monster-logo.png" alt="Monster Logo" >
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://b2hr.com/" target="_blank">
+                            <img src="assets/logos/parcerias/b2hr-logo.jpeg" alt="B2HR Logo">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://interioras.com.br/" target="_blank">
+                            <img src="assets/logos/parcerias/interioras-logo.png" alt="Interioras Logo">
+                        </a>
+                    </li>
+
+                    <!-- REPETIÇÃO PARA O LOOPING -->
+                    <li>
+                        <a href="https://www.instagram.com/cerrado.construtora/" target="_blank">
+                            <img src="assets/logos/parcerias/cc-logo.jpeg" alt="Cerrado Construtora Logo">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.criamov.com/" target="_blank">
+                            <img src="assets/logos/parcerias/criamov-logo.png" alt="CRIAmov Logo">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/clubedeengenhariabsb/" target="_blank">
+                            <img src="assets/logos/parcerias/cenb-logo.png" alt="CENB Logo">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.monsterenergy.com/pt-br/" target="_blank">
+                            <img src="assets/logos/parcerias/monster-logo.png" alt="Monster Logo">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://b2hr.com/" target="_blank">
+                            <img src="assets/logos/parcerias/b2hr-logo.jpeg" alt="B2HR Logo">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://interioras.com.br/" target="_blank">
+                            <img src="assets/logos/parcerias/interioras-logo.png" alt="Interioras Logo">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+
     </main>
 
     <script src="js/script.js"></script>
