style: Adição de imagem

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 
-<body>  
+<body class="home">  
     <header>
         <div class="menu-lateral">
             <img src="assets/icons/menu-icon.png" alt="Menu Icon" width="35px" height="35px" onclick="menuLateral()">
@@ -44,7 +44,7 @@
     <main>
         <section id="apresentacao">
             <div class="apt-foto">
-                <img src="assets/imgs/exemplo.png" alt="foto da PCI">
+                <img src="assets/imgs/banner-enej2.png" alt="foto da PCI">
             </div>
 
             <div class="apt-infos">
