feat: Header + Sessão incial

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -6,49 +6,6 @@
     <title>Sobre nós - Projetos Consultoria Integrada</title>
     <link rel="stylesheet" href="../css/style.css">
 
-    <!-- Style para o header específico -->
-    <style>
-        header {
-            border: 5px solid white;
-            border-radius: 15px;
-        }
-
-        #back-header {
-            display: flex;
-            margin: 0 auto;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-image: url("/assets/imgs/banner-sobre1.jpg");
-            padding-bottom: 130px;
-            gap: 90px;
-            flex-direction: column;
-        }
-
-        #prazer-pci {
-            text-align: center;
-            font-size: 30px;
-        }
-
-        @media (max-width: 1025px) {
-            header {
-                border: none;
-                border-bottom: 3px solid white;
-                border-radius: 0;
-            }
-
-            #back-header {
-                background-position: center;
-                background-repeat: no-repeat;
-                background-image: url("/assets/imgs/banner-sobre1.jpg")
-            }
-            
-            #prazer-pci {
-            text-align: center;
-            font-size: 28px;
-            }
-        }
-    </style>
 </head>
 
 <body class="sobrenos">  
@@ -110,7 +67,7 @@
             </div>
 
             <div class="apt-foto">
-                <img src="assets/imgs/exemplo.png" alt="foto da PCI">
+                <img src="../assets/imgs/sp.jpg" alt="foto da PCI">
             </div>
         </section>
     </main>
