feat: Carrossel da missão, visão e diversidade

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -70,6 +70,60 @@
                 <img src="../assets/imgs/sp.jpg" alt="foto da PCI">
             </div>
         </section>
+
+        <section id="MVD">
+            <div class="mvd-infos">
+                <div class="mvd-slide active" data-index="0">
+                    <div class="mvd-icon-titulo">
+                        <img src="../assets/icons/missao-icon.png" alt="ícone foguete MISSÃO">
+                        <h2>MISSÃO</h2>
+                    </div>
+                    <p>
+                        "Proporcionar experiências reais de mercado para alunos de 
+                        graduação do UniCEUB de forma integrada."
+                    </p>
+                </div>
+
+                <div class="mvd-slide" data-index="1">
+                    <div class="mvd-icon-titulo">
+                        <img src="../assets/icons/visao-icon.png" alt="ícone olho VISÃO">
+                        <h2>VISÃO</h2>
+                    </div>
+                    <p>
+                        "Ser uma EJ que forme profissionais capazes de influenciar e 
+                        transformar realidades por meio da vivência empresarial."
+                    </p>
+                </div>
+
+                <div class="mvd-slide" data-index="2">
+                    <div class="mvd-icon-titulo">
+                        <img src="../assets/icons/diversidade-icon.png" alt="ícone mão DIVERSIDADE">
+                        <h2>DIVERSIDADE</h2>
+                    </div>
+                    <p>
+                        "Ser uma EJ frase frasee frase frasede ifrasefrase frase 
+                        trafraseealidades pfrase da vivêncfrasefraseia emfrasel."
+                    </p>
+                </div>
+
+                <div class="mvd-seta" onclick="proximoSlide()">
+                    <img src="../assets/icons/seta-branca-icon.png" alt="">
+                </div>
+
+                <div class="mvd-dots">
+                    <span class="dot active" onclick="irParaSlide(0)"></span>
+                    <span class="dot" onclick="irParaSlide(1)"></span>
+                    <span class="dot" onclick="irParaSlide(2)"></span>
+                </div>
+            </div>        
+        </section>
+
+        <div>
+            <br>
+            <br>
+            <br>
+            <h1>aa</h1>
+        </div>
     </main>
 
     <script src="../js/script.js"></script>
