--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -101,8 +101,11 @@
                         <h2>DIVERSIDADE</h2>
                     </div>
                     <p>
-                        "Ser uma EJ frase frasee frase frasede ifrasefrase frase 
-                        trafraseealidades pfrase da vivêncfrasefraseia emfrasel."
+                        "É buscar a somatória das diferenças para
+                        atuar de maneira integrada, promovendo
+                        acessibilidade, acolhimento e inclusão para
+                        viabilizar mudanças e ser referência de
+                        inspiração"
                     </p>
                 </div>
 
@@ -117,13 +120,6 @@
                 </div>
             </div>        
         </section>
-
-        <div>
-            <br>
-            <br>
-            <br>
-            <h1>aa</h1>
-        </div>
     </main>
 
     <script src="../js/script.js"></script>
