feat: Sessão VALORES da PCI

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -120,6 +120,44 @@
                 </div>
             </div>        
         </section>
+
+        <section id="valores">
+            <div class="valores-titulo">
+                <h1>
+                    NOSSOS <br>
+                    <span style="font-size: 45px; border-bottom: 4px solid #c40001;">VALORES</span>
+                </h1>
+            </div>
+
+            <div class="valores-infos">   
+                <ul>
+                    <li class="valores-lista">
+                        <img src="../assets/icons/seta-vermelha2-icon.png" alt="seta dos valores">
+                        <p>ORGULHO DE SER PCI</p>
+                    </li>
+
+                    <li class="valores-lista">
+                        <img src="../assets/icons/seta-vermelha2-icon.png" alt="seta dos valores">
+                        <p>TRADIÇÃO E LEGADO</p>
+                    </li>
+
+                    <li class="valores-lista">
+                        <img src="../assets/icons/seta-vermelha2-icon.png" alt="seta dos valores">
+                        <p>VAI LÁ E FAZ</p>
+                    </li>
+
+                    <li class="valores-lista">
+                        <img src="../assets/icons/seta-vermelha2-icon.png" alt="seta dos valores">
+                        <p>SANGUE NO OLHO</p>
+                    </li>
+
+                    <li class="valores-lista">
+                        <img src="../assets/icons/seta-vermelha2-icon.png" alt="seta dos valores">
+                        <p>ALWAYS IN BETA</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <script src="../js/script.js"></script>
