feat: Favicon da PCI no head

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos Consultoria Integrada - Empresa Júnior</title>
     <link rel="stylesheet" href="css/style.css">
-
+    <link rel="icon" href="/assets/logos/PCI-logo-branca.png" type="image/png">
 </head>
 
 <body class="home">  
