--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre nós - Projetos Consultoria Integrada</title>
     <link rel="stylesheet" href="../css/style.css">
-
+    <link rel="icon" href="../assets/logos/PCI-logo-branca.png" type="image/png">
 </head>
 
 <body class="sobrenos">  
