feat: Contato com a PCI

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -42,7 +42,66 @@
     </header>
 
     <main>
-        
+        <section id="contato">
+            <div class="onde-estamos">
+                <div class="local-titulo">
+                    <h1>
+                        ONDE <br>
+                        <span style="font-size: 45px; border-bottom: 4px solid #c40001;">ESTAMOS</span>
+                    </h1>
+                </div>
+
+                <div class="oe-lista">
+                    <ul>
+                        <li class="oe-infos">
+                            <img src="../assets/icons/relogio-icon.png" alt="relógio Icon" width="30px" height="30px">
+                            <span>Segunda à Sexta - 14h às 18h</span>
+                        </li>
+
+                        <li class="oe-infos">
+                            <img src="../assets/icons/telefone-icon.png" alt="Telefone Icon" width="30px" height="30px">
+                            <span>(61) 99853-8516</span>
+                        </li>
+
+                        <li>
+                            <img src="../assets/icons/email-icon.png" alt="Email Icon" width="30px" height="30px">
+                            <span>contato@projetosintegrada.com.br</span>
+                        </li>
+
+                        <li>
+                            <img src="../assets/icons/pin-icon.png" alt="Local Icon" width="30px" height="30px">
+                            <span>SEPN 707/907, Ceub - Asa Norte, Bloco 2, Sala 2311 CEP: 70790-075</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div id="mapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3839.7002416084133!2d-47.896345561872025!3d-15.766989022340953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a3a46ff7ee93f%3A0xaceeb379d23571b7!2sCEUB!5e0!3m2!1spt-BR!2sbr!4v1761240219215!5m2!1spt-BR!2sbr" 
+                    width="500" height="410" 
+                    style="border:0;" allowfullscreen="" 
+                    loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </section>
+
+        <section id="formulario">
+            <div class="forms-titulo">
+                <h1>ENTRE EM CONTATO!</h1>
+            </div>
+
+            <div class="forms">
+                <iframe 
+                    src="https://docs.google.com/forms/d/e/1FAIpQLSeK-0uwWtIF5GKVggCyqHoONslKZGmzNwBva1xhESog8vdLWQ/viewform?usp=header" 
+                    width="900px" 
+                    height="900" 
+                    frameborder="0" 
+                    marginheight="0" 
+                    marginwidth="0">
+                    Carregando…
+                </iframe>
+            </div>
+        </section>
     </main>
 
     <script src="../js/script.js"></script>
