--- a/pages/portifolio.html
+++ b/pages/portifolio.html
@@ -161,7 +161,6 @@
             </div>
         </section>
 
-
         <section id="depoimentos">
             <h1>DEPOIMENTOS</h1>
 
@@ -193,6 +192,38 @@
                                     eu queria."
                                 </p>
                                 <span>Erian - Distribuidora Gama</span>
+                            </div>
+                        </li>
+                    </a>
+                </ul>
+            </div>
+
+            <div class="depo-lista">
+                <ul>
+                    <a href="">
+                        <li class="depo-item">
+                            <img src="../assets/logos/depoimentos/ronald.png" alt="" width="120px" height="120px">
+                            <div class="depo-texto">
+                                <p>
+                                    "A PCI teve um super trabalho tanto em termos de qualidade como de carinho. 
+                                    A empresa abraçou todas as nossas necessidades mesmo com várias mudanças o tempo todo!"
+                                </p>
+                                <span>Ronald</span>
+                            </div>
+                        </li>
+                    </a>
+
+                    <a href="https://www.instagram.com/advocatta/" target="_blank">
+                        <li class="depo-item" target="_blank">
+                            <img src="../assets/logos/depoimentos/advocatta.jpeg" alt="" width="120px" height="120px">
+                            <div class="depo-texto">
+                                <p>
+                                    "A equipe foi extremamente solicita, entendeu 
+                                    todas as nossas exigências e fez um projeto adequado 
+                                    à nossa realidade!! Recomendaria mil vezes, um parabéns 
+                                    enorme para todos!"
+                                </p>
+                                <span> Sofia Mustafá - AdvocattA</span>
                             </div>
                         </li>
                     </a>
