feat: Redes sociais

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -85,6 +85,21 @@
             </div>
         </section>
 
+        <div class="redes-sociais">
+        
+            <a href="https://www.instagram.com/projetosintegrada/" target="_blank">
+                <img src="../assets/icons/instagram-icon.png" alt="Instagram Icon" width="35px" height="35px">
+            </a>  
+
+            <a href="https://www.linkedin.com/company/projetosintegrada/" target="_blank">
+                <img src="../assets/icons/linkedin-icon.png" alt="Linkedin Icon" width="35px" height="35px">
+            </a>  
+
+            <a href="mailto:contato@projetosintegrada.com.br" target="_blank">
+                <img src="../assets/icons/email-icon.png" alt="Email Icon" width="35px" height="35px">
+            </a>  
+        </div>
+
         <section id="formulario">
             <div class="forms-titulo">
                 <h1>ENTRE EM CONTATO!</h1>
