--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -51,7 +51,7 @@
         <section id=apresentacao>
             <div class="apt-infos">
                 <div class="apt-titulo">
-                    <h1>Quem somos</h1>
+                    <h1>QUEM SOMOS</h1>
                 </div>
 
                 <div class="apt-texto">
@@ -158,6 +158,81 @@
                 </ul>
             </div>
         </section>
+
+        <section id="depoimentos">
+            <h1 style="font-size: 22px;">DEPOIMENTOS</h1>
+
+            <div class="depo-lista">
+                <ul>
+                    <a href="https://aguasclarasmidia.com.br/" target="_blank">
+                        <li class="depo-item">
+                            <img src="../assets/logos/depoimentos/aguas-claras-midia.png" alt="" width="120px" height="120px">
+                            <div class="depo-texto">
+                                <p>
+                                    "Fizeram um trabalho de
+                                    excelência, foi absolutamente
+                                    sensacional...
+                                    O retorno foi imenso."
+                                </p>
+                                <span>Patrícia - Águas Claras Mídias</span>
+                            </div>
+                        </li>
+                    </a>
+
+                    <a href="">
+                        <li class="depo-item" target="_blank">
+                            <img src="../assets/logos/depoimentos/dg.png" alt="" width="120px" height="120px">
+                            <div class="depo-texto">
+                                <p>
+                                    "A equipe foi muito cuidadosa
+                                    com as minhas necessidades.
+                                    A logomarca ficou do jeito que
+                                    eu queria."
+                                </p>
+                                <span>Erian - Distribuidora Gama</span>
+                            </div>
+                        </li>
+                    </a>
+                </ul>
+            </div>
+
+            <div class="depo-lista">
+                <ul>
+                    <a href="">
+                        <li class="depo-item">
+                            <img src="../assets/logos/depoimentos/ronald.png" alt="" width="120px" height="120px">
+                            <div class="depo-texto">
+                                <p>
+                                    "A PCI teve um super trabalho tanto em termos de qualidade como de carinho. 
+                                    A empresa abraçou todas as nossas necessidades mesmo com várias mudanças o tempo todo!"
+                                </p>
+                                <span>Ronald</span>
+                            </div>
+                        </li>
+                    </a>
+
+                    <a href="https://www.instagram.com/advocatta/" target="_blank">
+                        <li class="depo-item" target="_blank">
+                            <img src="../assets/logos/depoimentos/advocatta.jpeg" alt="" width="120px" height="120px">
+                            <div class="depo-texto">
+                                <p>
+                                    "A equipe foi extremamente solicita, entendeu 
+                                    todas as nossas exigências e fez um projeto adequado 
+                                    à nossa realidade!! Recomendaria mil vezes, um parabéns 
+                                    enorme para todos!"
+                                </p>
+                                <span> Sofia Mustafá - AdvocattA</span>
+                            </div>
+                        </li>
+                    </a>
+                </ul>
+            </div>
+
+            <div class="botao-contato">
+                <a href="/pages/contato.html">ENTRAR EM CONTATO</a>
+            </div>
+        </section>
+
     </main>
 
     <script src="../js/script.js"></script>
