feat: Adição da página de serviços

--- a/pages/portifolio.html
+++ b/pages/portifolio.html
@@ -27,7 +27,7 @@
                 <ul>
                     <a href="/index.html" id="nav-home" >Início</a>
                     <a href="/pages/sobre.html" id=nav-sobre >Sobre Nós</a>
-                    <a href="">Serviços</a></li>
+                    <a href="/pages/servicos.html">Serviços</a></li>
                     <a href="/pages/portifolio.html" id="nav-portifolio" class="active">Portifólio</a>
                     <a href="/pages/contato.html" id="nav-contato">Contato</a>
                 </ul>
