--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul>
                     <a href="/index.html" id="nav-home" class="active">Início</a>
                     <a href="/pages/sobre.html" id=nav-sobre>Sobre Nós</a>
-                    <a href="">Serviços</a></li>
+                    <a href="/pages/servicos.html">Serviços</a></li>
                     <a href="/pages/portifolio.html" id="nav-portifolio">Portifólio</a>
                     <a href="/pages/contato.html" id="nav-contato">Contato</a>
                 </ul>
