--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -28,7 +28,7 @@
                     <ul>
                         <a href="/index.html" id="nav-home" >Início</a>
                         <a href="/pages/sobre.html" id=nav-sobre class="active">Sobre Nós</a>
-                        <a href="">Serviços</a></li>
+                        <a href="/pages/servicos.html">Serviços</a></li>
                         <a href="/pages/portifolio.html" id="nav-portifolio">Portifólio</a>
                         <a href="/pages/contato.html" id="nav-contato">Contato</a>
                     </ul>
