fix: Botão de serviços

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <img src="assets/icons/telefone-icon.png" alt="telefone-icon">FALE CONOSCO
                     </a>
 
-                    <a href="">
+                    <a href="/pages/servicos.html">
                         <img src="assets/icons/servicos-icon.png" alt="telefone-icon">SERVIÇOS
                     </a>
                 </div>
