--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -42,7 +42,166 @@
     </header>
 
     <main>
+        <section id="serv-titulo">
         
+            <h1>NOSSOS SERVIÇOS</h1>
+
+            <div class="serv-titulo-frase">
+                <p>
+                    Oferecemos soluções personalizadas 
+                    para atender às necessidades do seu negócio, 
+                    com qualidade, eficiência e foco em resultados.
+                </p>
+            </div>
+
+            <div class="serv-frases">
+                <ul>
+                    <li class="frases-lista">
+                        <p>Estratégia, inovação e resultado.</p>
+                    </li>
+
+                    <li class="frases-lista">
+                        <p>Transformamos ideias em impacto!</p>
+                    </li>
+
+                    <li class="frases-lista">
+                        <p>Conectamos desafios a soluções.</p>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="serv-titulo-frase">
+                <p><strong>Seu projeto, nossa próxima conquista.</strong> </p>
+            </div>
+
+            <div class="botao-contato">
+                <a href="/pages/contato.html">ENTRAR EM CONTATO</a>
+            </div>
+        </section>
+
+        <section id=servicos>
+            <div class="servico">
+                <img class="icone-fundo" src="../assets/icons/servicos/operacoes-icon.png" alt="Serviço Icon" width="40px" height="40px">
+                <h3>OPERAÇÕES</h3>
+                <p>Mensuração individual dos membros para melhorar impacto e produtividade; análise de fluxos para otimizar processos, reduzir custos e aumentar a eficiência.</p>
+            </div>
+
+            <div class="servico">
+                <img class="icone-fundo" src="../assets/icons/servicos/estrategia-icon.png" alt="Serviço Icon" width="40px" height="40px">
+                <h3>ESTRATÉGIA E EXPANSÃO</h3>
+                <p>À partir de uma análise completa do negócio e do mercado, identificam-se oportunidades e direcionam-se ações para a obtenção de melhores resultados.</p>
+            </div>
+
+            <div class="servico">
+                <img class="icone-fundo" src="../assets/icons/servicos/marketing-icon.png" alt="Serviço Icon" width="40px" height="40px">
+                <h3>MARKETING E VENDAS</h3>
+                <p>Posicionamento definido por produto, preço, praça e promoção, além do mapeamento dos processos comerciais para a identificação de gargalos.</p>
+            </div>
+
+            <div class="servico">
+                <img class="icone-fundo" src="../assets/icons/servicos/negocios-icon.png" alt="Serviço Icon" width="40px" height="40px">
+                <h3>NOVOS NEGÓCIOS</h3>
+                <p>Organização voltada para a estruturação de processos, funções e estratégias, garantindo uma atuação eficiente, escalável e sustentável.</p>
+            </div>
+
+            <div class="servico">
+                <img class="icone-fundo" src="../assets/icons/servicos/pesquisa-icon.png" alt="Serviço Icon" width="40px" height="40px">
+                <h3>PESQUISA DE MERCADO</h3>
+                <p>Coleta e análise de informações de mercado, como consumidores, concorrentes, tendências e hábitos de compras.</p>
+            </div>
+
+            <div class="servico">
+                <img class="icone-fundo" src="../assets/icons/servicos/consultoria-icon.png" alt="Serviço Icon" width="40px" height="40px">
+                <h3>CONSULTORIA</h3>
+                <p>Acompanhamento mensal de 3, 6 ou 9 meses para a sugestão de melhorias e diagnóstico detalhado das dores não óbvias dentro de um negócio.</p>
+            </div>
+
+            <div class="servico">
+                <img class="icone-fundo" src="../assets/icons/servicos/ti-icon.png" alt="Serviço Icon" width="40px" height="40px">
+                <h3>TECNOLOGIA E INOVAÇÕES</h3>
+                <p>Formulação de E-Commerce, Landing Page ou Site Institucional.</p>
+            </div>
+
+            <div class="servico">
+                <img class="icone-fundo" src="../assets/icons/servicos/arquitetura-icon.png" alt="Serviço Icon" width="40px" height="40px">
+                <h3>ARQUITETURA</h3>
+                <p>Desenvolvimento de um planejamento completo para a repaginação de ambientes, com foco em funcionalidade, estética e bem-estar.</p>
+            </div>
+        </section>
+
+        <section id="depoimentos">
+            <h1 style="font-size: 22px;">DEPOIMENTOS</h1>
+
+            <div class="depo-lista">
+                <ul>
+                    <a href="https://aguasclarasmidia.com.br/" target="_blank">
+                        <li class="depo-item">
+                            <img src="../assets/logos/depoimentos/aguas-claras-midia.png" alt="" width="120px" height="120px">
+                            <div class="depo-texto">
+                                <p>
+                                    "Fizeram um trabalho de
+                                    excelência, foi absolutamente
+                                    sensacional...
+                                    O retorno foi imenso."
+                                </p>
+                                <span>Patrícia - Águas Claras Mídias</span>
+                            </div>
+                        </li>
+                    </a>
+
+                    <a href="">
+                        <li class="depo-item" target="_blank">
+                            <img src="../assets/logos/depoimentos/dg.png" alt="" width="120px" height="120px">
+                            <div class="depo-texto">
+                                <p>
+                                    "A equipe foi muito cuidadosa
+                                    com as minhas necessidades.
+                                    A logomarca ficou do jeito que
+                                    eu queria."
+                                </p>
+                                <span>Erian - Distribuidora Gama</span>
+                            </div>
+                        </li>
+                    </a>
+                </ul>
+            </div>
+
+            <div class="depo-lista">
+                <ul>
+                    <a href="">
+                        <li class="depo-item">
+                            <img src="../assets/logos/depoimentos/ronald.png" alt="" width="120px" height="120px">
+                            <div class="depo-texto">
+                                <p>
+                                    "A PCI teve um super trabalho tanto em termos de qualidade como de carinho. 
+                                    A empresa abraçou todas as nossas necessidades mesmo com várias mudanças o tempo todo!"
+                                </p>
+                                <span>Ronald</span>
+                            </div>
+                        </li>
+                    </a>
+
+                    <a href="https://www.instagram.com/advocatta/" target="_blank">
+                        <li class="depo-item" target="_blank">
+                            <img src="../assets/logos/depoimentos/advocatta.jpeg" alt="" width="120px" height="120px">
+                            <div class="depo-texto">
+                                <p>
+                                    "A equipe foi extremamente solicita, entendeu 
+                                    todas as nossas exigências e fez um projeto adequado 
+                                    à nossa realidade!! Recomendaria mil vezes, um parabéns 
+                                    enorme para todos!"
+                                </p>
+                                <span> Sofia Mustafá - AdvocattA</span>
+                            </div>
+                        </li>
+                    </a>
+                </ul>
+            </div>
+
+            <div class="botao-contato">
+                <a href="/pages/contato.html">ENTRAR EM CONTATO</a>
+            </div>
+        </section>
     </main>
 
     <script src="../js/script.js"></script>
