feat: Apresentação dos diretores da PCI na página Sobre

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -159,6 +159,44 @@
             </div>
         </section>
 
+        <section id="direx">
+            <h1 style="font-size: 22px; border-bottom: 3px solid white;">BASTIDORES</h1>
+
+            <div class="d_presidente">
+                <img src="../assets/imgs/DIREX/Presidente.png" alt="Presidente PCI" width="250px">
+                <p>ÁRTHUR NÓBREGA</p>
+                <h4>Presidente Institucional</h4>
+            </div>
+
+            <div class="d_diretores">
+                <ul>
+                    <li class="lista_direx">
+                        <img src="../assets/imgs/DIREX/Direx_GG.png" alt="GG" width="250px">
+                        <p>JÚLIA AFFONSO</p>
+                        <h4>Diretora de Gente e Gestão</h4>
+                    </li>
+
+                    <li class="lista_direx">
+                        <img src="../assets/imgs/DIREX/Direx_proconsult.png" alt="PROJETOS" width="250px">
+                        <p>RAFAEL ANDRADE</p>
+                        <h4>Diretor de Projetos</h4>
+                    </li>
+
+                    <li class="lista_direx">
+                        <img src="../assets/imgs/DIREX/Direx_AGN.png" alt="AGN" width="250px">
+                        <p>PEDRO MALLAB</p>
+                        <h4>Diretor Comercial</h4>
+        
+                    </li>
+                    <li class="lista_direx">
+                        <img src="../assets/imgs/DIREX/Direx_enarq.png" alt="ENARQ" width="250px">
+                        <p>CARLOS DAMASCENO</p>
+                        <h4>Diretor de Engenharia/Arquitetura</h4>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
         <section id="depoimentos">
             <h1 style="font-size: 22px;">DEPOIMENTOS</h1>
 
