--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -160,7 +160,7 @@
         </section>
 
         <section id="direx">
-            <h1 style="font-size: 22px; border-bottom: 3px solid white;">BASTIDORES</h1>
+            <h1 style="font-size: 22px; border-bottom: 3px solid white;">BASTIDORES 2025</h1>
 
             <div class="d_presidente">
                 <img src="../assets/imgs/DIREX/Presidente.png" alt="Presidente PCI" width="250px">
