feat: Rodapé criado

--- a/index.html
+++ b/index.html
@@ -280,6 +280,51 @@
 
     </main>
 
+    <footer class="footer">
+        <div class="footer-info">
+            <div class="footer-esquerda">
+                <img src="/assets/logos/PCI-logo-escrita-branca.png" alt="Logo da Empresa" class="footer-logo-PCI">
+                <div class="footer-contatos">
+                    <p><img src="assets/icons/email-icon.png" alt="Email">contato@projetosintegrada.com.br</p>
+                    <p><img src="assets/icons/telefone-icon.png" alt="Telefone">(61) 99853-8516</p>
+                </div>
+            </div>
+
+            <div class="footer-meio">
+                <div class="footer-hora-local">
+                    <p><img src="assets/icons/relogio-icon.png" alt="Horário">De segunda a sexta das 14h às 18h.</p>
+                    <p><img src="assets/icons/pin-icon.png" alt="Localização">SEPN 707/907, Ceub - Asa Norte, Bloco 2, Sala 2311 CEP: 70790-075</p>
+                </div>
+
+                <div class="footer-redes-sociais">
+                    <a href="https://www.instagram.com/projetosintegrada/">
+                        <img src="assets/icons/instagram-icon.png" alt="Instagram">
+                    </a>
+                    <a href="mailto:contato@projetosintegrada.com.br">
+                        <img src="assets/icons/email-icon.png" alt="Email">
+                    </a>
+                    <a href="https://www.linkedin.com/company/projetosintegrada/">
+                        <img src="assets/icons/linkedin-icon.png" alt="LinkedIn">
+                    </a>
+                </div>
+            </div>
+
+            <div class="footer-direita">
+                <ul>
+                    <li><a href="/index.html">Início</a></li>
+                    <li><a href="/pages/sobre.html">Sobre</a></li>
+                    <li><a href="/pages/servicos.html">Serviços</a></li>
+                    <li><a href="/pages/portifolio.html">Portfólio</a></li>
+                    <li><a href="/pages/contato.html">Contato</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="copyright">
+            <p>© 2025 Projetos Consultoria Integrada. Todos os direitos reservados.</p>
+        </div>
+    </footer>
+
     <script src="js/script.js"></script>
 </body>
 </html>
