fix: Links das páginas

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
             <nav>
                 <ul>
                     <a href="/index.html" id="nav-home" class="active">Início</a>
-                    <a href="/pages/sobre.html" id=nav-sobre>Sobre Nós</a>
-                    <a href="/pages/servicos.html">Serviços</a></li>
-                    <a href="/pages/portifolio.html" id="nav-portifolio">Portifólio</a>
-                    <a href="/pages/contato.html" id="nav-contato">Contato</a>
+                    <a href="./pages/sobre.html" id=nav-sobre>Sobre Nós</a>
+                    <a href="./pages/servicos.html">Serviços</a></li>
+                    <a href="./pages/portifolio.html" id="nav-portifolio">Portifólio</a>
+                    <a href="./pages/contato.html" id="nav-contato">Contato</a>
                 </ul>
             </nav>
         </div>
 
         <div class="icon-telefone">
-            <a href="/pages/contato.html">
+            <a href="./pages/contato.html">
                 <img src="assets/icons/telefone-icon.png" alt="Telefone Icon" width="35px" height="35px">
             </a>    
         </div>
@@ -91,7 +91,7 @@
                         <img src="assets/icons/telefone-icon.png" alt="telefone-icon">FALE CONOSCO
                     </a>
 
-                    <a href="/pages/servicos.html">
+                    <a href="pages/servicos.html">
                         <img src="assets/icons/servicos-icon.png" alt="telefone-icon">SERVIÇOS
                     </a>
                 </div>
@@ -210,7 +210,7 @@
                 <ul>
                     <a href="https://aguasclarasmidia.com.br/" target="_blank">
                         <li class="depo-item">
-                            <img src="../assets/logos/depoimentos/aguas-claras-midia.png" alt="" width="120px" height="120px">
+                            <img src="./assets/logos/depoimentos/aguas-claras-midia.png" alt="" width="120px" height="120px">
                             <div class="depo-texto">
                                 <p>
                                     "Fizeram um trabalho de
@@ -225,7 +225,7 @@
 
                     <a href="">
                         <li class="depo-item" target="_blank">
-                            <img src="../assets/logos/depoimentos/dg.png" alt="" width="120px" height="120px">
+                            <img src="./assets/logos/depoimentos/dg.png" alt="" width="120px" height="120px">
                             <div class="depo-texto">
                                 <p>
                                     "A equipe foi muito cuidadosa
@@ -244,7 +244,7 @@
                 <ul>
                     <a href="">
                         <li class="depo-item">
-                            <img src="../assets/logos/depoimentos/ronald.png" alt="" width="120px" height="120px">
+                            <img src="./assets/logos/depoimentos/ronald.png" alt="" width="120px" height="120px">
                             <div class="depo-texto">
                                 <p>
                                     "A PCI teve um super trabalho tanto em termos de qualidade como de carinho. 
@@ -257,7 +257,7 @@
 
                     <a href="https://www.instagram.com/advocatta/" target="_blank">
                         <li class="depo-item" target="_blank">
-                            <img src="../assets/logos/depoimentos/advocatta.jpeg" alt="" width="120px" height="120px">
+                            <img src="./assets/logos/depoimentos/advocatta.jpeg" alt="" width="120px" height="120px">
                             <div class="depo-texto">
                                 <p>
                                     "A equipe foi extremamente solicita, entendeu 
@@ -273,7 +273,7 @@
             </div>
 
             <div class="botao-contato">
-                <a href="/pages/contato.html">ENTRAR EM CONTATO</a>
+                <a href="./pages/contato.html">ENTRAR EM CONTATO</a>
             </div>
         </section>
 
@@ -311,11 +311,11 @@
 
             <div class="footer-direita">
                 <ul>
-                    <li><a href="/index.html">Início</a></li>
-                    <li><a href="/pages/sobre.html">Sobre</a></li>
-                    <li><a href="/pages/servicos.html">Serviços</a></li>
-                    <li><a href="/pages/portifolio.html">Portfólio</a></li>
-                    <li><a href="/pages/contato.html">Contato</a></li>
+                    <li><a href="index.html">Início</a></li>
+                    <li><a href="./pages/sobre.html">Sobre</a></li>
+                    <li><a href="./pages/servicos.html">Serviços</a></li>
+                    <li><a href="./pages/portifolio.html">Portfólio</a></li>
+                    <li><a href="./pages/contato.html">Contato</a></li>
                 </ul>
             </div>
         </div>
