--- a/pages/contato.html
+++ b/pages/contato.html
@@ -25,17 +25,17 @@
         <div class="header-nav">
             <nav>
                 <ul>
-                    <a href="/index.html" id="nav-home" >Início</a>
-                    <a href="/pages/sobre.html" id=nav-sobre >Sobre Nós</a>
-                    <a href="/pages/servicos.html">Serviços</a></li>
-                    <a href="/pages/portifolio.html" id="nav-portifolio">Portifólio</a>
-                    <a href="/pages/contato.html" id="nav-contato" class="active">Contato</a>
+                    <a href="../index.html" id="nav-home" >Início</a>
+                    <a href="../pages/sobre.html" id=nav-sobre >Sobre Nós</a>
+                    <a href="../pages/servicos.html">Serviços</a></li>
+                    <a href="../pages/portifolio.html" id="nav-portifolio">Portifólio</a>
+                    <a href="../pages/contato.html" id="nav-contato" class="active">Contato</a>
                 </ul>
             </nav>
         </div>
 
         <div class="icon-telefone">
-            <a href="/pages/contato.html">
+            <a href="../pages/contato.html">
                 <img src="../assets/icons/telefone-icon.png" alt="Telefone Icon" width="35px" height="35px">
             </a>    
         </div>
@@ -151,23 +151,23 @@
             <div class="footer-direita">
                 <ul>
                     <li>
-                        <a href="/index.html">Início</a>
+                        <a href="../index.html">Início</a>
                     </li>
 
                     <li>
-                        <a href="/pages/sobre.html">Sobre</a>
+                        <a href="../pages/sobre.html">Sobre</a>
                     </li>
 
                     <li>
-                        <a href="/pages/servicos.html">Serviços</a>
+                        <a href="../pages/servicos.html">Serviços</a>
                     </li>
 
                     <li>
-                        <a href="/pages/portifolio.html">Portfólio</a>
+                        <a href="../pages/portifolio.html">Portfólio</a>
                     </li>
 
                     <li>
-                        <a href="/pages/contato.html">Contato</a>
+                        <a href="../pages/contato.html">Contato</a>
                     </li>
                 </ul>
             </div>
