--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -26,17 +26,17 @@
             <div class="header-nav">
                 <nav>
                     <ul>
-                        <a href="/index.html" id="nav-home" >Início</a>
-                        <a href="/pages/sobre.html" id=nav-sobre class="active">Sobre Nós</a>
-                        <a href="/pages/servicos.html">Serviços</a></li>
-                        <a href="/pages/portifolio.html" id="nav-portifolio">Portifólio</a>
-                        <a href="/pages/contato.html" id="nav-contato">Contato</a>
+                        <a href="../index.html" id="nav-home" >Início</a>
+                        <a href="../pages/sobre.html" id=nav-sobre class="active">Sobre Nós</a>
+                        <a href="../pages/servicos.html">Serviços</a></li>
+                        <a href="../pages/portifolio.html" id="nav-portifolio">Portifólio</a>
+                        <a href="../pages/contato.html" id="nav-contato">Contato</a>
                     </ul>
                 </nav>
             </div>
 
             <div class="icon-telefone">
-                <a href="/pages/contato.html">
+                <a href="../pages/contato.html">
                     <img src="../assets/icons/telefone-icon.png" alt="Telefone Icon" width="35px" height="35px">
                 </a>    
             </div>
@@ -267,7 +267,7 @@
             </div>
 
             <div class="botao-contato">
-                <a href="/pages/contato.html">ENTRAR EM CONTATO</a>
+                <a href="../pages/contato.html">ENTRAR EM CONTATO</a>
             </div>
         </section>
 
@@ -305,23 +305,23 @@
             <div class="footer-direita">
                 <ul>
                     <li>
-                        <a href="/index.html">Início</a>
+                        <a href="../index.html">Início</a>
                     </li>
 
                     <li>
-                        <a href="/pages/sobre.html">Sobre</a>
+                        <a href="../pages/sobre.html">Sobre</a>
                     </li>
 
                     <li>
-                        <a href="/pages/servicos.html">Serviços</a>
+                        <a href="../pages/servicos.html">Serviços</a>
                     </li>
 
                     <li>
-                        <a href="/pages/portifolio.html">Portfólio</a>
+                        <a href="../pages/portifolio.html">Portfólio</a>
                     </li>
 
                     <li>
-                        <a href="/pages/contato.html">Contato</a>
+                        <a href="../pages/contato.html">Contato</a>
                     </li>
                 </ul>
             </div>
