Style: mudança de favicon

--- a/pages/portifolio.html
+++ b/pages/portifolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio - Projetos Consultoria Integrada</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="../assets/logos/PCI-logo-branca.png" type="image/png">
+    <link rel="icon" href="../assets/logos/PCI-logo-vermelha.png" type="image/png">
 </head>
 
 <body>  
@@ -90,7 +90,7 @@
                         <a href="https://yolobsb.com.br/" target="_blank">
                             VISITAR
                         </a>
-                        <a href="" target="_blank">
+                        <a href="https://drive.google.com/file/d/1ab_-LA1LROUkw8QACE4lCBM7iVCA95Nl/view?usp=sharing" target="_blank">
                             NOSSA CARTELA 
                         </a>
                     </div>
@@ -122,7 +122,7 @@
                         <a href="https://coloradoburguer.com/colorado_burguer" target="_blank">
                             VISITAR
                         </a>
-                        <a href="" target="_blank">
+                        <a href="https://drive.google.com/file/d/1ab_-LA1LROUkw8QACE4lCBM7iVCA95Nl/view?usp=sharing" target="_blank">
                             NOSSA CARTELA
                         </a>
                     </div>
@@ -153,7 +153,7 @@
                         <a href="https://bvgovernanca.com.br/" target="_blank">
                             VISITAR
                         </a>
-                        <a href="" target="_blank">
+                        <a href="https://drive.google.com/file/d/1ab_-LA1LROUkw8QACE4lCBM7iVCA95Nl/view?usp=sharing" target="_blank">
                             NOSSA CARTELA
                         </a>
                     </div>
