--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="header-nav">
             <nav>
                 <ul>
-                    <a href="/index.html" id="nav-home" class="active">Início</a>
+                    <a href="index.html" id="nav-home" class="active">Início</a>
                     <a href="./pages/sobre.html" id=nav-sobre>Sobre Nós</a>
                     <a href="./pages/servicos.html">Serviços</a></li>
                     <a href="./pages/portifolio.html" id="nav-portifolio">Portifólio</a>
